<resources>
    <string name="app_name">My Application</string>
    <string name="butler" translatable="false">Butler에 오신 걸 환영합니다! 더 많은 혜택을 누리고 싶다면 이미지를 누르세요!</string>
    <string name="butlers" translatable="false">Butler에 오신 걸 환영합니다! 더 많은 혜택을 누리고 싶다면 다음을 누르세요!</string>
    <string name="daum" translatable="false">다음</string>
    <string name="first">처음 이용이신가요?</string>
    <string name="next">다음</string>
    <string name="no">No</string>

    <string name="label_latitude">위도:</string>
    <string name="label_longitude">경도:</string>
    <string name="latitude_text">위도: %1$.4f</string>
    <string name="longitude_text">경도: %1$.4f</string>
    <string name="gpsBtnStr">위치 불러오기</string>
    <string name="resetStr">초기화</string>
    <string name="hello">hello</string>
    <string name="welcome">Welcome</string>
    <string name="send_button_description">Send message</string>
    <string name="write_here">Write here</string>
    <string name="todo">TODO</string>
    <string name="back">이전으로</string>
    <string name="survey">설문조사</string>
    <string name="talkStr">대화하기</string>
    <string name="geoStr">지도(실시간)</string>
    <string name="setting">setting</string>
    <string name="welcomestr">Butler에 오신 걸 환영합니다! 더 많은 혜택을 누리고 싶다면 버튼을 누르세요!</string>
    <string name="loginStr">로그인</string>

</resources>