<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/survey"
            android:textSize="11sp" />

        <Button
            android:id="@+id/gptbtn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/talkStr"
            android:textSize="11sp" />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/geoStr"
            android:textSize="11sp" />

        <Button
            android:id="@+id/Btn4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/setting"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/welcomestr"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:text="@string/loginStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:orientation="vertical"></LinearLayout>


</LinearLayout>